3lab Final fixed